deployment/terraform/modules/k8s-addons/logging/test.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: monitoring-grafana
  namespace: kube-system
spec:
  replicas: 1
  serviceName: monitoring-grafana
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: grafana
    spec:
      containers:
      - name: grafana
        image: gcr.io/google_containers/heapster-grafana-amd64:v4.4.3
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /var
          name: grafana-persistent-storage
        - mountPath: /etc/ssl/certs
          name: etc-ssl-certs
      nodeSelector:
        kops.k8s.io/instancegroup: monitoring-nodes
      volumes:
      - name: etc-ssl-certs
        hostPath:
          path: /etc/ssl/certs
  volumeClaimTemplates:
   - metadata:
       name: grafana-persistent-storage
       annotations:
         volume.beta.kubernetes.io/storage-class: "default"
     spec:
       storageClassName: "default"
       accessModes: ["ReadWriteOnce"]
       resources:
         requests:
           storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: monitoring-grafana
  name: monitoring-grafana
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    k8s-app: grafana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-haystack-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
   - host: haystack-metrics.prod.monitoring.expedia.com
     http:
        paths:
         - path: /
           backend:
             serviceName: monitoring-grafana
             servicePort: 80
